--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,14 @@
 services:
   - type: web
-    name: ladybug-hosting
+    name: ladybug-bot
     env: python
+    region: oregon
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
@@ -14,5 +18,5 @@ services:
 
 databases:
   - name: ladybug-db
-    databaseName: ladybug
-    user: ladybug
+    plan: free
+    region: oregon
